<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DetailRecipectivity">

    <item android:id="@+id/all_recipes"
        android:title="@string/all_recipes"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/favs"
        android:title="@string/favs"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/my_rec"
        android:title="@string/my_rec"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/home"
        android:title="@string/home"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>